tests/fixtures/flow/mermaid/negative/unsafe_directives.mmd
flowchart TD
A --> B
click A call callback()
link B https://example.test
href A https://example.test
callback B
